deploy/dotnet-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-web
  template:
    metadata:
      labels:
        app: dotnet-web
    spec:
      containers:
      - name: dotnet-web
        image: silencelf/dotnet_web:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
