deploy/dotnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-service
  namespace: default
spec:
  selector:
    app: dotnet-web
  ports:
  - port: 5000
    targetPort: 5000
