deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: myapp.io
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: dotnet-service
            port:
              number: 5000
